[gd_scene load_steps=5 format=3 uid="uid://dpkkyo8c5driy"]

[ext_resource type="Script" path="res://Scripts/ObjectScripts/SidewaysDoorOpenner.gd" id="1_4paio"]
[ext_resource type="Texture2D" uid="uid://4jmd0y5crx2q" path="res://Assets/Images/Objects/Props/PropDoorSideways.png" id="2_uydjx"]
[ext_resource type="Texture2D" uid="uid://47vvy211o436" path="res://Assets/Images/Objects/Props/PropDoorFaceForward.png" id="3_8110c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tj1rn"]
size = Vector2(2, 64)

[node name="SidewaysDoor" type="Node2D"]
script = ExtResource("1_4paio")

[node name="PropDoorSideways" type="Sprite2D" parent="."]
position = Vector2(-20, 6)
texture = ExtResource("2_uydjx")

[node name="PropDoorFaceForward" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.670588, 0.670588, 0.670588, 1)
position = Vector2(-20, 6)
scale = Vector2(-1, 1)
texture = ExtResource("3_8110c")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-5, 6)
shape = SubResource("RectangleShape2D_tj1rn")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
